apps/minio/components/httproute/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: minio-console
  namespace: ${MINIO_NAMESPACE:-minio}
spec:
  parentRefs:
    - name: ${GATEWAY_NAME:-cilium-gateway}
      namespace: ${GATEWAY_NAMESPACE:-default}
  hostnames:
    - "${INGRESS_HOSTNAME_CONSOLE}.${INGRESS_DOMAIN}"
  rules:
    - backendRefs:
        - name: minio-deployment
          port: 9001
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: minio-api
  namespace: ${MINIO_NAMESPACE:-minio}
spec:
  parentRefs:
    - name: ${GATEWAY_NAME:-cilium-gateway}
      namespace: ${GATEWAY_NAMESPACE:-default}
  hostnames:
    - "${INGRESS_HOSTNAME_API}.${INGRESS_DOMAIN}"
  rules:
    - backendRefs:
        - name: minio-deployment
          port: 9000
